--- a/LogicLibrary/LogicLibrary.csproj
+++ b/LogicLibrary/LogicLibrary.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="BankAccount.cs" />
     <Compile Include="Customers.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Products.cs" />
