--- a/LogicLibrary/LogicLibrary.csproj
+++ b/LogicLibrary/LogicLibrary.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Address.cs" />
     <Compile Include="BankAccount.cs" />
     <Compile Include="Customers.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Orders.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
