--- a/LogicLibrary/LogicLibrary.csproj
+++ b/LogicLibrary/LogicLibrary.csproj
@@ -46,11 +46,15 @@
     <Compile Include="Books.cs" />
     <Compile Include="Customers.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="Movie.cs" />
+    <Compile Include="OnlineShopping.cs" />
     <Compile Include="Orders.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs" />
+    <Compile Include="Swiggy.cs" />
+    <Compile Include="UPIPayment.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
